# AmericaTradeBot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_query_indexes.py  0003_metrics_views.py  0004_drop_grafana_ai_manager.py
app/: config.py
app/bot/: __init__.py  bot.py  callback_data.py  scheduler.py
app/bot/filters/: filters.py
app/bot/handlers/: admin.py  admin_mailing.py  assisted_selection.py  consultation_request.py  llm_chat.py  others.py  self_selection.py  subscriptions.py  users.py
app/bot/keyboards/: admin_reply.py  (+3 more)
app/infrastructure/: paths.py
app/lexicon/: lexicon_ru.py
config/: config.py
grafana/dashboards/: americatrade_overview.json
migrations/: create_tables.py
scripts/: preview_nurture.py  preview_weekly_posts.py
tests/: test_admin_mailing.py  test_ai_manager_prompt_rules.py  test_ai_manager_react_context.py  test_ai_manager_react_tools.py  test_ai_manager_service.py  test_ai_manager_tools.py  test_assisted_selection_flow.py  test_bitrix_utils.py  test_cars_catalog.py  test_csv_download.py  test_database_schema.py  test_db_guards.py  test_llm_chat_keyboard.py  test_main_menu.py  test_nurture.py  test_safe_send.py  test_salesdata_filters.py  test_scheduler_config.py  test_scheduler_lock.py  test_self_selection_branch.py  test_self_selection_handlers.py  test_subscription_newsletter.py  test_subscriptions_handler.py  test_utils_all_models.py  test_weekly_posts.py
(+61 files in other folders)
