[project]
name = "americatrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.27.0",
    "aiohttp==3.13.5",
    "apscheduler==3.10.4",
    "environs==10.0.0",
    "psycopg[binary]==3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic==2.10.0",
    "python-dotenv==1.0.0",
    "redis==5.0.1",
    "async-timeout>=5.0.1",
    "marshmallow<4",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
